Added google verification

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{{site.url}}/assets/css/style.css">
     <link rel="stylesheet" href="/assets/css/post.css">
     <link rel="stylesheet" href="{{site.url}}/assets/css/highlight-min.css"/>
-
+    <meta name="google-site-verification" content="FsiVrF2rPi_Ok5I_6nfEDpsUfTM460AFSSwpUqILIKg" />
 </head>
 <body class="dark-mode">
 
