--- a/_layouts/category-archive.html
+++ b/_layouts/category-archive.html
@@ -9,7 +9,7 @@
     {% seo %}
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{{site.url}}/assets/css/style.css">
-
+    <meta name="google-site-verification" content="FsiVrF2rPi_Ok5I_6nfEDpsUfTM460AFSSwpUqILIKg" />
 </head>
 <body class="dark-mode">
 
