Added favicon & moved common part of header to header.html

--- a/_layouts/category-archive.html
+++ b/_layouts/category-archive.html
@@ -1,17 +1,5 @@
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{page.title}}</title>
-    {% seo %}
-    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="{{site.url}}/assets/css/style.css">
-    <meta name="google-site-verification" content="1VBkBRbgO6gx4H2lJiTf5Mf0E_ebWVxaelgt1YcEDPA" />
-</head>
-<body class="dark-mode">
+{% include header.html %}
 
 {% include navigation.html %}
 
@@ -37,6 +25,3 @@
 
 {% include footer.html %}
 
-<script src="{{site.url}}/assets/js/script.js"></script>
-</body>
-</html>
