--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="{{site.url}}/assets/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="{{site.url}}/assets/favicon_io/site.webmanifest">
 
+
+    <link rel="stylesheet" href="{{site.url}}/assets/css/syntax.css">
     <link rel="stylesheet" href="{{site.url}}/assets/css/style.css">
 </head>
 <body class="dark-mode">
