--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -19,14 +19,14 @@
             </form>
             <nav>
                 <ul>
-                    <li> <a href="{{site.url}}/about">About Me</a> </li>
+                    <li> <a href="{{site.url}}/about">ABOUT ME</a> </li>
                 </ul>
             </nav>
 
-            <div class="theme-switcher">
+            <!-- <div class="theme-switcher">
                 <span id="moon" class="active" title="Swith to day mode ☀️">🌙</span>
                 <span id="sun" class="theme-mode" title="Switch to night mode 🌙">☀️</span>
-            </div>
+            </div> -->
         </div>
     </div>
 </header>
