--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,4 +17,4 @@
     <link rel="stylesheet" href="{{site.url}}/assets/css/syntax.css">
     <link rel="stylesheet" href="{{site.url}}/assets/css/style.css">
 </head>
-<body class="dark-mode">
+<body class="">
