--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@
 
 <div class="main-container bg-color-two">
     <main class="container">
-        <div class="main-section post">
+        <div class="main-section post post-page">
             <article>
                 <h1 class="post-title"> <a href="">{{page.title }}</a>  </h1>
                 <p class="post-date">{{ page.date | date: "%-d %B %Y"}}</p>
