--- a/_includes/category-sidebar.html
+++ b/_includes/category-sidebar.html
@@ -1,5 +1,5 @@
 
-    <h4>Posts by category </h4>
+    <h4 class="title-color-green">Posts by category </h4>
     <ul>
 
         {% for category in site.categories  %}
