--- a/_layouts/category-archive.html
+++ b/_layouts/category-archive.html
@@ -6,7 +6,7 @@
 <div class="main-container bg-color-two ">
     <main class="container">
         <div class="main-section post">
-            <h2>Posts of {{ page.type }} </h2>
+            <h2 class="title-color-green">Posts of {{ page.type }} </h2>
             <ul style="padding: 15px">
                 {% for post in site.categories[page.type] %}
                 <li style="padding: 3px">
