--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
         <div class="footer-box">
             <div class="footer-box-unit footer-box-first-unit">
                 <ul class="email-list">
-                    <li>Get in touch: </li>
+                    <li class="title-color-blue">Get in touch: </li>
                     <li><a href="mailto:{{site.email}}">{{site.email}}</a></li>
                 </ul>
             </div> 
