--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,13 +1,13 @@
 <header>
     <div class="container">
         <div class="header-left">
-            <h3  class="logo"><a href="{{site.url}}"> Dev | Bishal Thapa </a></h3>
+            <h3  class="logo"><a href="{{site.url}}"> <span class="title-color-blue">Dev | </span>Bith</a></h3>
         </div>
         <div class="header-right">
 
             <nav>
                 <ul class="post-title">
-                    <li> <a href="{{site.url}}/about">ABOUT ME</a> </li>
+                    <li> <a class="title-color-blue" href="{{site.url}}/about">ABOUT ME</a> </li>
                 </ul>
             </nav>
 
