--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,9 +169,9 @@ main {
 }
 .post-list li h2 a {
     color: var(--post-list-color);
-    font-size: 26px;
+    font-size: 23px;
     text-decoration: none;
-    font-weight: 100;
+    font-weight: bold;
 }
 .post-list li h2 a:hover {
     text-decoration: underline;
