--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <header>
     <div class="container">
         <div class="header-left">
-            <h3  class="logo"><a href="{{site.url}}"> <span class="title-color-blue">Bishal | </span>Thapa</a></h3>
+            <h3  class="logo"><a href="{{site.url}}"> <span class="title-color-blue">Bishal Thapa </span></a></h3>
         </div>
         <div class="header-right">
 
