--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,3 @@
-
 {% include header.html %}
 <link rel="stylesheet" href="/assets/css/post.css">
 
@@ -7,18 +6,30 @@
 
 
 <div class="main-container bg-color-two">
-    <main class="container">
-        <div class="main-section post post-page">
-            <article>
-                <h1 class="post-title"> <a href="">{{page.title }}</a>  </h1>
-                <p class="post-date">{{ page.date | date: "%-d %B %Y"}}</p>
-                <div>
-                {{ content }}
-                </div>
-            </article>
-        </div>
+  <main class="container">
+    <div class="main-section post post-page">
+      <article>
+        <h1 class="post-title"><a href="">{{page.title }}</a></h1>
+        <p class="post-date">{{ page.date | date: "%-d %B %Y"}}
+          |
+          <span class="reading-time" title="Estimated read time">
+          {% assign words = page.content | strip_html | number_of_words %}
+          {{ words | divided_by: 180 | plus: 1 }} min read
+     </span> |
+          {% for category in page.categories %}
+          <a class="post-page-category" href="{{site.baseurl}}/category/{{category}}">
+            {{category}}
+          </a>
+          {% endfor %}
+        </p>
 
-    </main>
+        <div>
+          {{ content }}
+        </div>
+      </article>
+    </div>
+
+  </main>
 </div>
 
 
