--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,330 +1,358 @@
 
 :root {
-    --bg-color-one: #11346ef7;
-    --bg-color-two: #f1f8f8;
-    --bg-color-three: #5da26d;
-    --text-color: #555;
-    --post-title-color:#11346ef7;
-    --post-list-color: #11346ef7;
-    --font-mono: Monospace;
-    --font-serif: Serif;
-    --font-sans-serif: Sans-Serif;
+  --bg-color-one: #ffff;
+  --bg-color-two: #ffff;
+  --bg-color-three: #EBE4FF;
+  --text-color: #36344d;
+  --post-title-color: #673de6;
+  --post-list-color: #673de6;
+  --font-mono: 'Fira Code', Monaco, Consolas, Ubuntu Mono, monospace;
+  --font-serif: 'Fira Code', Monaco, Consolas, Ubuntu Mono, monospace;
+  --font-sans-serif: 'Fira Code', Monaco, Consolas, Ubuntu Mono, monospace;
 }
 
-
-h1,
-h2,
-h3,
-h4,
-ul,
-p {
-    margin: 0px;
-    padding: 0px;
+h1, h2, h3, h4, ul, p {
+  margin: 0px;
+  padding: 0px;
 }
 
 body {
-    margin: 0px;
-    padding: 0px;
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-    line-height: 1.5;
-    font-size: larger;
-    background-color: var(--bg-color-one);
-    color: var(--text-color);
-    font-family: var(--font-serif)
+  margin: 0px;
+  padding: 0px;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  line-height: 1.5;
+  background-color: var(--bg-color-one);
+  color: var(--text-color);
+  font-family: 'Fira Code', Monaco, Consolas, Ubuntu Mono, monospace;
 }
 
 .bg-color-one {
-    background-color: var(--bg-color-one);
+  background-color: var(--bg-color-one);
 }
 
 .bg-color-two {
-    background-color: var(--bg-color-two);
+  background-color: var(--bg-color-two);
 }
-
 
 
 .container-full {
-    width: 100%;
+  width: 100%;
 }
 
 .container {
-    max-width: 1060px;
-    margin: auto;
-    padding-left: 20px;
-    padding-right: 20px
+  max-width: 1060px;
+  margin: auto;
 }
 
 
 header {
-    background-color: var(--bg-color-three);
+  border-bottom: 1px solid black;
+  padding-bottom: 6px;
 }
 
 header h3 {
-    border: 1px solid #11346ef7;
-    font-size: 20px;
-    padding: 1px 5px;
+  font-size: 20px;
+  padding: 1px 5px;
+  color: var(--post-title-color);
 }
 
 .header-left {
-    float: left;
-    padding: 5px 0;
+  float: left;
+  padding: 5px 0;
+  font-weight: bolder;
 }
 
 .header-right {
-    float:right;
-    display: flex;
-    padding: 3px 0;
+  float: right;
+  display: flex;
+  padding: 3px 11px;
 }
+
 .header-right a {
-    color:white;
+  color: white;
 }
 
 .logo a {
-    color: white;
-    text-decoration: none;
-    padding: 5px;
-    border-radius: 5px;
-    font-weight: bolder;
-}
-.logo a:hover {
-    text-decoration: none;
+  text-decoration: none;
+  padding: 5px;
+  color: var(--post-title-color);
+  font-weight: 900;
+
 }
 
+.logo a:hover {
+  text-decoration: none;
+}
 
 .search-box input {
-    padding: 6px 5px 5px 29px;
-    font-size: 0.75em;
-    border: none;
-    border-radius: 5px;
-    color: var(--text-color);
-    background-color: var(--bg-color-two);
+  padding: 6px 5px 5px 29px;
+  font-size: 0.75em;
+  border: none;
+  border-radius: 5px;
+  color: var(--text-color);
+  background-color: var(--bg-color-two);
 }
+
 input:focus-visible {
-    outline: none;
+  outline: none;
 }
 
 nav, .theme-switcher {
-    padding-top: 4px;
+  padding-top: 4px;
 }
 
 nav ul li {
-    list-style: none;
+  list-style: none;
+  border: 1px solid;
 }
+
 nav ul li a {
-    font-size: 17px;
-    font-weight: bold;
-    padding-right: 20px;
-    text-decoration: none;
-    color: var(--text-color);
+  font-size: 17px;
+  font-weight: bold;
+  padding: 5px;
+  text-decoration: none;
+  color: var(--text-color);
 }
 
 nav ul li a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 
 /* ---------------- theme-switcher ---------------- */
 .theme-switcher > span {
-    cursor: pointer;
-    display: none;
+  cursor: pointer;
+  display: none;
 }
 
 .theme-switcher > .active {
-    display: block;
+  display: block;
 }
 
 /* ---------------- main ---------------- */
 .main-container {
-    flex: 1 0 auto;
-    padding-top: 30px;
-}
-main {
-    display: flex;
+  flex: 1 0 auto;
+  padding-top: 30px;
 }
 
+main {
+  display: flex;
+
+}
 
 .main-section {
-    background-color: var(--bg-color-two);
-    width: 70%;
-    float: left;
-    padding-left: 15px;
-    padding-right: 15px;
+  background-color: var(--bg-color-two);
+  width: 70%;
+  float: left;
+  padding-right: 15px;
 }
 
 .post-list {
-    list-style: none;
+  list-style: none;
 }
 
-.post-list li:not(:first-child) {
-    padding-top: 10px;
+.post-list li {
+  border: 1px solid black;
+  margin-bottom: 34px;
+  padding-left: 9px;
+  padding-bottom: 13px;
+}
+
+.post-list article {
+  padding-bottom: 10px;
+}
+
+.post-list li p {
+  font-size: 15px;
+  padding-top: 10px;
+  padding-right: 10px;
+  text-align: justify;
 }
 
 .post-list .post-date {
-    margin: 0px;
-    padding: 0px;
+  margin: 0px;
+  padding: 0px;
 }
 
 .post-list li span {
-    font-size: 17px;
-    color: var(--text-color);
-}
-.post-list li h2 a {
-    color: var(--post-list-color);
-    font-size: 23px;
-    text-decoration: none;
-    font-weight: bold;
-}
-.post-list li h2 a:hover {
-    text-decoration: underline;
+  font-size: 13px;
+  color: var(--text-color);
 }
 
-#about-me, #evolution, #where-ive-worked, #licenses--certifications {
-    color: var(--post-list-color);
+.post-list li h2 a {
+  color: #673de6;
+  font-size: 15px;
+  text-decoration: none;
+  font-weight: bolder;
 }
+
+.post-list li a:hover {
+  color: #673de6;
+}
+
+.read-more {
+  padding:5px 2px;
+}
+.read-more:hover {
+  color: #673de6;
+  background-color: #EBE4FF;
+  text-decoration: none !important;
+}
+
 /* ----------------  sidebar ----------------  */
 
 .side-category {
-    flex: 1;
-    padding: 5px 5px 16px 27px;
-    margin-bottom: 50px;
-    border-radius: 3px;
-    background-color: var(--bg-color-two);
-    color: white;
-    height: fit-content;
+  margin-bottom: 50px;
+  border-radius: 3px;
+  background-color: var(--bg-color-two);
+  color: white;
+  height: fit-content;
+  border: 1px solid #673de6;
+  padding: 10px 13px;
+  width: 25%;
 }
+
 .side-category-title, .title-color-green {
-    color: var(--post-title-color);
-    font-family: var(--font-serif);
-}
-.title-color-blue {
-    color: var(--post-list-color);
+  color: var(--post-title-color);
+  font-family: var(--font-serif);
 }
 
-.side-category h4 {
-    padding:7px 0px;
+.side-category li {
+  list-style: none;
+  border-bottom: 1px solid var(--text-color);
 }
 
-.side-category  li {
-    list-style: none;
-    border-bottom: 1px solid var(--text-color);
-    padding:10px 5px;
-}
 .side-category li a {
-    text-decoration: none;
-    color: var(--post-list-color);
-}
-.side-category li a:hover {
-    text-decoration: underline;
+  display: block;
+  text-decoration: none;
+  color: var(--post-list-color);
+  padding: 6px 8px;
 }
 
+.side-category li a:hover {
+  background-color: #EBE4FF;
+}
 
 .category-count {
-    float: right;
-    padding: 0px 5px;
-    border-radius: 5px;
-    color: var(--text-color);
+  float: right;
 }
 
 /* ----------------  pagination ----------------  */
 .pagination {
-    margin-top: 50px;
+  margin-top: 50px;
 }
-.pagination .previous {
-    background-color: var(--bg-color-two);
-    padding: 10px;
 
+.pagination .previous {
+  background-color: var(--bg-color-two);
+  padding: 10px;
 }
 
 .pagination a {
-    background-color: var(--bg-color-one);
-    padding: 10px;
+  background-color: var(--bg-color-one);
+  padding: 10px;
 
 }
 
 /* ----------------  footer ----------------  */
 footer {
-    padding: 2px 0px;
-    background-color: var(--bg-color-three);
+  padding: 2px 0px;
+  border-top: 1px solid;
 }
 
-.email-list  {
-    display: inline-flex;
-    gap: 10px;
-    list-style: none;
-    font-size: 15px;
+.email-list {
+  display: inline-flex;
+  gap: 10px;
+  list-style: none;
+  font-size: 15px;
 }
 
 
 .email-list a {
-    color: var(--post-title-color);
-    text-decoration: none;
-    font-weight: bold;
+  color: var(--post-title-color);
+  text-decoration: none;
+  font-weight: bold;
 }
 
 
 pre {
-    word-break: break-all;
+  word-break: break-all;
 }
 
-@media (max-width:620px) {
-    .search-box {
-        display: none;
-    }
-    main {
-        display: block;
-    }
-    .main-section, side-category {
-        width: 100%;
-    }
+@media (max-width: 620px) {
+  .search-box {
+    display: none;
+  }
+
+  main {
+    display: block;
+  }
+
+  .main-section, side-category {
+    width: 100%;
+  }
 
 }
 
 .post {
-    margin-bottom: 12%;
+  margin-bottom: 12%;
 }
+
 .post-page {
-    margin-top: 2%;
+  margin-top: 2%;
 }
 
 .post-page .post-date {
-    margin-bottom: 3%;
+  margin-bottom: 3%;
+  padding-top: 10px;
+  font-size: 13px;
 }
 
+.post-page-category {
+  color: #673de6!important;
+  background-color: #EBE4FF;
+  margin:0 3px;
+  font-weight: bold;
+  font-size: 13px;
+}
 
 .post a {
-    color: var(--post-list-color);
-    text-decoration: none;
+  color: var(--post-list-color);
+  text-decoration: none;
 }
 
 .post-title a {
-    color: var(--post-title-color);
-    font-family: var(--font-sans-serif);
+  color: var(--post-title-color);
+  font-family: var(--font-sans-serif);
 }
 
-
-.post  a:hover {
-    text-decoration: underline;
+.posts-of .post-date {
+  color: #673de6!important;
 }
 
+.post a:hover {
+  text-decoration: underline;
+}
 
 
 code {
-    border-radius: 5px;
-    padding: 0px 1px;
+  border-radius: 5px;
+  padding: 0px 1px;
 }
 
 .language-plaintext {
-    background-color: #dfe1df;
-    color: #414141;
-    font-family: var(--font-mono);
+  background-color: #ebedeb;
+  color: #371c89;
+  font-size: 15px;
+  font-family: monospace;
 }
+
 .highlight {
-    border-radius: 5px;
+  border-radius: 5px;
 }
 
 pre {
-    word-break: break-all;
-    white-space: pre-wrap;
+  word-break: break-all;
+  white-space: pre-wrap;
 }
