--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,15 +28,6 @@ body {
   font-family: 'Fira Code', Monaco, Consolas, Ubuntu Mono, monospace;
 }
 
-.bg-color-one {
-  background-color: var(--bg-color-one);
-}
-
-.bg-color-two {
-  background-color: var(--bg-color-two);
-}
-
-
 .container-full {
   width: 100%;
 }
@@ -44,91 +35,7 @@ body {
 .container {
   max-width: 1060px;
   margin: auto;
-}
-
-
-header {
-  border-bottom: 1px solid black;
-  padding-bottom: 6px;
-}
-
-header h3 {
-  font-size: 20px;
-  padding: 1px 5px;
-  color: var(--post-title-color);
-}
-
-.header-left {
-  float: left;
-  padding: 5px 0;
-  font-weight: bolder;
-}
-
-.header-right {
-  float: right;
-  display: flex;
-  padding: 3px 11px;
-}
-
-.header-right a {
-  color: white;
-}
-
-.logo a {
-  text-decoration: none;
-  padding: 5px;
-  color: var(--post-title-color);
-  font-weight: 900;
-
-}
-
-.logo a:hover {
-  text-decoration: none;
-}
-
-.search-box input {
-  padding: 6px 5px 5px 29px;
-  font-size: 0.75em;
-  border: none;
-  border-radius: 5px;
-  color: var(--text-color);
-  background-color: var(--bg-color-two);
-}
-
-input:focus-visible {
-  outline: none;
-}
-
-nav, .theme-switcher {
-  padding-top: 4px;
-}
-
-nav ul li {
-  list-style: none;
-  border: 1px solid;
-}
-
-nav ul li a {
-  font-size: 17px;
-  font-weight: bold;
-  padding: 5px;
-  text-decoration: none;
-  color: var(--text-color);
-}
-
-nav ul li a:hover {
-  text-decoration: underline;
-}
-
-
-/* ---------------- theme-switcher ---------------- */
-.theme-switcher > span {
-  cursor: pointer;
-  display: none;
-}
-
-.theme-switcher > .active {
-  display: block;
+  padding: 10px;
 }
 
 /* ---------------- main ---------------- */
@@ -139,219 +46,15 @@ nav ul li a:hover {
 
 main {
   display: flex;
-
 }
 
-.main-section {
-  background-color: var(--bg-color-two);
-  width: 70%;
-  float: left;
-  padding-right: 15px;
+p {
+  text-justify: auto;
+  font-size: 19px;
 }
 
-.post-list {
-  list-style: none;
-}
-
-.post-list li {
-  border: 1px solid black;
-  margin-bottom: 34px;
-  padding-left: 9px;
-  padding-bottom: 13px;
-}
-
-.post-list article {
-  padding-bottom: 10px;
-}
-
-.post-list li p {
-  font-size: 15px;
-  padding-top: 10px;
-  padding-right: 10px;
-  text-align: justify;
-}
-
-.post-list .post-date {
-  margin: 0px;
-  padding: 0px;
-}
-
-.post-list li span {
-  font-size: 13px;
-  color: var(--text-color);
-}
-
-.post-list li h2 a {
-  color: #673de6;
-  font-size: 15px;
-  text-decoration: none;
-  font-weight: bolder;
-}
-
-.post-list li a:hover {
-  color: #673de6;
-}
-
-.read-more {
-  padding:5px 2px;
-  font-weight: 5600;
-}
-.read-more:hover {
-  color: #673de6;
-  background-color: #EBE4FF;
-  text-decoration: none !important;
-}
-
-/* ----------------  sidebar ----------------  */
-
-.side-category {
-  margin-bottom: 50px;
-  border-radius: 3px;
-  background-color: var(--bg-color-two);
-  color: white;
-  height: fit-content;
-  border: 1px solid #673de6;
-  padding: 10px 13px;
-  width: 25%;
-}
-
-.side-category-title, .title-color-green {
-  color: var(--post-title-color);
-  font-family: var(--font-serif);
-}
-
-.side-category li {
-  list-style: none;
-  border-bottom: 1px solid var(--text-color);
-}
-
-.side-category li a {
-  display: block;
-  text-decoration: none;
-  color: var(--post-list-color);
-  padding: 6px 8px;
-}
-
-.side-category li a:hover {
-  background-color: #EBE4FF;
-}
-
-.category-count {
-  float: right;
-}
-
-/* ----------------  pagination ----------------  */
-.pagination {
-  margin-top: 50px;
-}
-
-.pagination .previous {
-  background-color: var(--bg-color-two);
-  padding: 10px;
-}
-
-.pagination a {
-  background-color: var(--bg-color-one);
-  padding: 10px;
-
-}
-
-/* ----------------  footer ----------------  */
-footer {
-  padding: 2px 0px;
-  border-top: 1px solid;
-}
-
-.email-list {
-  display: inline-flex;
-  gap: 10px;
-  list-style: none;
-  font-size: 15px;
+.header h1  {
+  font-size: 45px;
 }
 
 
-.email-list a {
-  color: var(--post-title-color);
-  text-decoration: none;
-  font-weight: bold;
-}
-
-
-pre {
-  word-break: break-all;
-}
-
-@media (max-width: 620px) {
-  .search-box {
-    display: none;
-  }
-
-  main {
-    display: block;
-  }
-
-  .main-section, side-category {
-    width: 100%;
-  }
-
-}
-
-.post {
-  margin-bottom: 12%;
-}
-
-.post-page {
-  border: 1px solid;
-  padding: 11px;
-  margin-top: 2%;
-}
-
-.post-page .post-date {
-  margin-bottom: 3%;
-  padding-top: 10px;
-  font-size: 13px;
-}
-
-.post-page-category {
-  color: #673de6!important;
-  background-color: #EBE4FF;
-  margin:0 3px;
-  font-weight: bolder;
-  font-size: 13px;
-  padding:3px;
-}
-
-.post a {
-  color: #673de6!important;
-  text-decoration: none;
-}
-
-.post-title a {
-  color: var(--post-title-color);
-  font-family: var(--font-sans-serif);
-}
-
-.post a:hover {
-  text-decoration: underline;
-}
-
-ode {
-  border-radius: 5px;
-  padding: 0px 1px;
-}
-
-.language-plaintext {
-  background-color: #ebedeb;
-  color: #371c89;
-  font-size: 15px;
-  font-family: monospace;
-}
-
-.highlight {
-  border-radius: 5px;
-}
-
-pre {
-  word-break: break-all;
-  white-space: pre-wrap;
-}
