--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@ body {
   background-color: var(--bg-color-one);
   color: var(--text-color);
   font-family: 'Fira Code', Monaco, Consolas, Ubuntu Mono, monospace;
+  padding:20px;
 }
 
 .container-full {
